<resources>
    <string name="app_name">Bar La Josefa</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Idioma</string>
    <string name="title_activity_navigation_drawer">Bar La Josefa</string>
    <string name="item_andd_reservar_nav_item">Reservación</string>
    <string name="item_andd_evento_nav_item">Eventos</string>
    <string name="item_andd_promo__nav_item">Promociones</string>
    <string name="item_andd_msj_nav_item">Mensaje</string>
    <string name="item_andd_drink_nav_item">Bebidas</string>
    <string name="item_andd_schedule_nav_item">Horarios</string>
    <string name="item_andd_facebook_nav_item">Facebook</string>
    <string name="item_andd_gallery_nav_item">Galeria</string>
    <string name="label_abnd_pricipal_tabitem">Pricipal</string>
    <string name="commentary">Comentario</string>
    <string name="select_image">Elige una imagen</string>
    <string name="drink_name">Nombre de la bebida</string>
    <string name="drink_description">Descripción de la bebida</string>
    <string name="show">Mostrar</string>
    <string name="upload">Guardar</string>
    <string name="day">Día</string>
    <string name="open">Abierto</string>
    <string name="close_hour">Cerrado</string>
    <string name="choose_image">Elige una imagen</string>
    <string name="write_weekday">Escribe el día de la semana</string>
    <string name="enter_hour">Hora de entrada (hh:mm)</string>
    <string name="close_hour_schedule">Hora de cierre (hh:mm)</string>
    <string name="save">Guardar</string>
    <string name="description">Descripción</string>
    <string name="promotions">Promociones</string>
    <string name="select_action">Selecciona una acción:</string>
    <string name="delete">Eliminar</string>
    <string name="success_delete">Eliminado exitosamente</string>
    <string name="do_not_selected">No ha seleccionado ningún archivo</string>
    <string name="success_process">Proceso exitoso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="show_comments">mostrar Comentarios</string>
    <string name="send_comments">enviar Comentario</string>
    <string name="write_comments">Escribe un Comentario</string>
    <string name="take_photo">Tomar foto</string>
    <string name="choose_gallery">Elegir de galeria</string>
    <string name="choose_option">Elige una opción</string>

    <string name="cancel">Cancelar</string>
    <string name="choose_photo">Seleccionar Foto</string>
    <string name="share_image">compartir imagen</string>
    <string name="error">Error!!</string>
    <string name="error_server">Error con el servidor</string>
    <string name="id">id</string>
    <string name="data">data</string>
    <string name="content_type">content-type</string>
    <string name="app_json">application/json</string>
    <string name="response">Response</string>
    <string name="correctly">Correctamente</string>
    <string name="failed">Ha Fallado</string>
    <string name="comment">Comentario</string>
    <string name="image">image</string>
    <string name="removed">Elimanado</string>

    <string name="facebook">https://www.facebook.com/Josefa2015/?fref=ts</string>
    <string name="youtube">https://www.youtube.com/watch?v=FZqrf7ev6gg</string>
    <string name="whatsapp">Bienvenidos a Bar La Josefa https://www.facebook.com/Josefa2015/?fref=ts</string>
    <string name="paq_whatts">com.whatsapp</string>
    <string name="text_plain">text/plain</string>
    <string name="uploads">uploads</string>
    <string name="upload_progress">subiendo...</string>
    <string name="format_image">image/*</string>
    <string name="upload_sucess">Imagen Agregada</string>
    <string name="no_file_selected">No ha Seleccionado</string>
    <string name="imag">image</string>
    <string name="show_gallery">Mostrar Galeria</string>
    <string name="go">Girar!</string>
    <string name="reset">Acomodar</string>
    <string name="select_pic">Selecciona una imagen</string>
    <string name="chat_send_pic">ha enviado una foto</string>
    <string name="chat_change_pic">ha cambiado su foto de perfil</string>
    <string name="add_comment">Comentario agregado</string>
    <string name="write_comment">Debes escribir un comentario</string>
    <string name="admon">Administrador</string>
    <string name="not_android_6">Esta versión no es Android 6 o más</string>
    <string name="schedule_modified">Ha modificado su horario</string>
    <string name="new_promotion">Añadió una nueva promoción</string>
    <string name="success">Proceso exitoso</string>
    <string name="reservation_ready">Reservación realizada</string>
    <string name="loading">Cargando</string>
    <string name="file_not_selected">No ha seleccionado ningún archivo</string>
    <string name="new_drink">Añadió una nueva bebida</string>
    <string name="new_event">Añadió un nuevo evento</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Híbrido</string>
    <string name="satelite">Satélite</string>
    <string name="earth">Tierra</string>
    <string name="enjoy">Ven a disfrutar</string>
    <string name="not_log_out">No se pudo cerrar sesión</string>
    <string name="welcome">Bienvenidos</string>
    <string name="name">Nombre:</string>
    <string name="informatic_system">Sistemas Informáticos</string>
    <string name="developers">Desarrolladores</string>
    <string name="catherine">Zúñiga Catherine Magali</string>
    <string name="diana">Manzano Alamilla Diana Laura</string>
    <string name="mayra">Macías Prado Mayra</string>
    <string name="n_people">N° personas:</string>
    <string name="phone">Teléfono:</string>
    <string name="date">Fecha:</string>
    <string name="order">Orden:</string>
    <string name="schedule">Horario</string>
    <string name="turn_botle">Gira la botella</string>
    <string name="turn">Girar</string>
    <string name="user">Usuario</string>
    <string name="write_message">Escribe un mensaje</string>
    <string name="write_comment2">Escribe un comentario</string>
    <string name="share">Publicar</string>
    <string name="fomat_text">Atif Aslam</string>
    <string name="ladys">Ladys</string>
    <string name="name_hint">Nombre</string>
    <string name="phone_hint">Teléfono</string>
    <string name="n_people_hint">N°personas</string>
    <string name="date_hint">Fecha</string>
    <string name="order_reserve">Orden para reservar:</string>
    <string name="order_hint">Orden</string>
    <string name="reserve">Reservar</string>
    <string name="write_comment3">Escribir Comentario</string>
    <string name="videos">Vídeos</string>
    <string name="list_videos">Lista de videos</string>
    <string name="lady_nigth">Lady nigth</string>
    <string name="intro">Intro</string>
    <string name="_00_00">00:00</string>
    <string name="hello_welcome">Hola, bienvenido!</string>
    <string name="game_botle">Juego de la Botella</string>
    <string name="ubication">Ubicación</string>
    <string name="administration">Administrador</string>
    <string name="about">Acerca de...</string>
    <string name="close">Salir</string>
    <string name="drinks">Bebidas</string>
    <string name="administrator">Administrador</string>
    <string name="reservation">Reservación</string>
    <string name="schedules">Horarios</string>
    <string name="social_media">Redes Sociales</string>
    <string name="comments">Comentarios</string>
    <string name="game">Juego</string>
    <string name="events">Eventos</string>
    <string name="reservations">Reservaciones</string>
    <string name="messages">Mensajes</string>
    <string name="gallery">Galería</string>
    <string name="photo_send">ha enviado una foto</string>
    <string name="Unable_to_close_session">No se pudo cerrar sesion</string>
    <string name="select_photo">Selecciona una foto</string>
    <string name="failed_to_initialize_YouTube">Error al inicializar YouTube</string>
    <string name="url_bar_la_josefa">Bienvenidos a Bar La Josefa https://www.facebook.com/Josefa2015/?fref=ts</string>
    <string name="no_start_session">No inicio sesión</string>
    <string name="bar_la_josefa">Bar La Josefa</string>
    <string name="sending_error">ERROR DE ENVIO:</string>
</resources>
