<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background"
    tools:context="mx.edu.utng.lajosefa.activities.VideoActivity">

    <TextView
        android:id="@+id/txv_main"
        android:layout_width="@dimen/size_150"
        android:layout_height="@dimen/size_45"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:text="@string/videos"
        android:textAlignment="center"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/size_34sp" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_91"
        android:background="@drawable/border"
        android:text="@string/list_videos"
        android:textColor="@color/md_white_1000" />


    <Button
        android:id="@+id/btn_lady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border"
        android:text="@string/lady_nigth"
        android:onClick="video1"
        android:textColor="@color/md_white_1000" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_lady"
        android:layout_marginTop="@dimen/size_45"
        android:background="@drawable/border"
        android:text="@string/intro"
        android:onClick="video"
        android:textColor="@color/md_white_1000"
        android:id="@+id/btn_intro" />






</RelativeLayout>
