<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_16"
    android:background="@drawable/green_background"
    tools:context="mx.edu.utng.lajosefa.fragments.MainEventFragment">
    <Button
        android:id="@+id/btn_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imv_event_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/size_56"
        android:background="@drawable/border"
        android:text="@string/select_image"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imv_event_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/size_11"
        android:layout_marginStart="@dimen/size_11"
        android:src="@drawable/la_josefa"
        android:layout_toEndOf="@+id/btn_choose_file"
        android:layout_toRightOf="@+id/btn_choose_file" />

    <EditText
        android:id="@+id/edt_event_commentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_choose_file"
        android:layout_marginTop="@dimen/size_44"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/commentary"
        android:paddingLeft="@dimen/size_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/size_25"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pgb_loading"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_event_commentary"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/edt_event_commentary"
        android:layout_marginBottom="@dimen/size_30" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pgb_loading"
        android:layout_marginBottom="@dimen/size_30"
        android:layout_toLeftOf="@+id/imv_event_image"
        android:layout_toStartOf="@+id/imv_event_image"
        android:background="@drawable/border"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_upload"
        android:layout_alignBottom="@+id/btn_upload"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/size_61"
        android:layout_marginRight="@dimen/size_61"
        android:background="@drawable/border"
        android:text="@string/show"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>
