<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_rowWeight="1"
    app:cardCornerRadius="@dimen/margin_8"
    app:cardElevation="@dimen/margin_8"
    android:layout_marginBottom="@dimen/size_16"
    android:layout_marginLeft="@dimen/size_16"
    android:layout_marginRight="@dimen/size_16"
    android:id="@+id/crv_detail">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border2">

        <TextView
            android:id="@+id/txv_textview1"
            android:layout_width="@dimen/size_160"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="@dimen/size_160"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txv_textview2"
            android:layout_toEndOf="@+id/txv_textview4"
            android:layout_toRightOf="@+id/txv_textview4"
            android:text="@string/name"
            android:textSize="@dimen/size_15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_textview2"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_textview1"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20" />

        <TextView
            android:id="@+id/txv_phone"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txv_textview2"
            android:layout_alignBottom="@+id/txv_textview2"
            android:layout_alignEnd="@+id/txv_name"
            android:layout_alignRight="@+id/txv_name"
            android:layout_toEndOf="@+id/txv_textview2"
            android:layout_toRightOf="@+id/txv_textview2"
            android:text="@string/phone"
            android:textSize="@dimen/size_15" />

        <TextView
            android:id="@+id/txv_textview3"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txv_textview2"
            android:layout_toLeftOf="@+id/txv_phone"
            android:layout_toStartOf="@+id/txv_phone"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20" />

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txv_textview3"
            android:layout_alignBottom="@+id/txv_textview3"
            android:layout_alignEnd="@+id/txv_phone"
            android:layout_alignRight="@+id/txv_phone"
            android:layout_toEndOf="@+id/txv_textview3"
            android:layout_toRightOf="@+id/txv_textview3"
            android:text="@string/date"
            android:textSize="@dimen/size_15" />

        <TextView
            android:id="@+id/txv_textview4"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txv_textview2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/txv_textview2"
            android:layout_below="@+id/txv_textview3"
            android:text="@string/n_people"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15" />


        <TextView
            android:id="@+id/txv_npeople"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txv_date"
            android:layout_alignRight="@+id/txv_date"
            android:layout_below="@+id/txv_date"
            android:layout_toEndOf="@+id/txv_textview3"
            android:layout_toRightOf="@+id/txv_textview3"
            android:text="@string/n_people"
            android:textSize="@dimen/size_15" />


        <TextView
            android:id="@+id/txv_textview5"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_npeople"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20" />
        <TextView
            android:id="@+id/txv_order"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_textview5"
            android:text="@string/order"
            android:textSize="@dimen/size_15" />
    </RelativeLayout>
</android.support.v7.widget.CardView>